syntax = "proto3";
package raftstorepb;

import "go.etcd.io/etcd/raft/v3/raftpb/raft.proto";

message RaftLocalState {
  raftpb.HardState hard_state = 1;
  uint64 last_index = 2;
  uint64 last_term = 3;
}

message RaftApplyState {
  uint64 apply_index = 1;
  RaftTruncatedState truncated_state = 2;
}

message RaftTruncatedState {
  uint64 index = 1;
  uint64 term = 2;
}